test/classes/stonea/constAndParamInConstructor.good
constAndParamInConstructor.chpl:4: In constructor 'Foo':
constAndParamInConstructor.chpl:4: error: invalid access of class member in constructor header
